Assets/css/passions.css
#intro {
    padding: 0;
    text-align: center;
}

#intro h2 {
    padding-bottom: 1rem;
    padding-top: 1rem;
    border-bottom: 2px solid purple;
}

#intro p {
    padding: 1.5rem;
}

#statSum {
    margin-left: auto;
    margin-right: auto;
    border-collapse: separate;
    border-spacing: 0;
    padding: 0;
    table-layout: fixed;
    width: 100%;
}

#statSum tr, #statSum td {
    border-bottom: 2px solid purple ;
    border-right: 2px solid purple;
    padding: .5rem;
    border-spacing: 0;
    vertical-align: top;
}

#statSum tr td:last-child {
    border-right: none;
}

#statSum tr:last-child > td {
    border-bottom: none;
}

#statSum th {
    padding: .25rem;
    border-bottom: 2px solid purple;
    text-align: center;
    font-weight: unset;
    font-size: 2rem;
}

h3 {
    margin-bottom: 1rem;
}

#statSum td p {
    margin-left: .5rem;
    margin-right: .5rem;
}

span.passion-link {
    cursor: pointer;
    color: rgb(10, 0, 155);
}

span.passion-link:hover {
    color: rgb(17, 0, 255);
}

#list h2 {
    border-bottom: 2px solid purple;
    margin-bottom: 0;
}

#list-head {
    margin-bottom: 0;
    padding: 0;
    height: 50px;
    border-radius: 20px 20px 0 0;
    border-bottom: none;
}

/*#filter {
    height: 100%;
    width: 20%;
    border-radius: 15px 0 0 0;
    margin-right: 0;
    padding-left: 5%;
    float: left;
    outline: none;
    border: 2px solid black;
    border-right: none;
}

#filter:hover {
    background-color: rgb(212, 212, 212);
}

#reset {
    height: 100%;
    width: 15%;
    margin-left: 0;
    float: left;
    outline: none;
    border: 2px solid black;
    border-right: none;
}

#reset:hover {
    background-color: rgb(212, 212, 212);
}

#search {
    height: 100%;
    width: 65%;
    border-radius: 0 15px 0 0;
    float: left;
    outline: none;
    border: none;
    border: 2px solid black;
    background-color: rgb(239, 239, 239);
}

#filters {  
    height: 0;
    padding: 0;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    border-top: none;
    border-bottom: none;
    border-radius: unset;
}

.filter-item {
    margin-left: 10px;
    background-color: lightgrey;
}*/

#list {
    padding: 0;
    height: 550px;
    border-radius: 20px;
    overflow-y: hidden;
}

#passion-table {
    width: 100%;
    height: 500px;
}

#name {
    width: 60%;
    padding: 5px;
    border-bottom: 2px solid black;
}

#stat {
    width: 40%;
    padding: 5px;
    border-left: 1px solid black;
    border-bottom: 2px solid black;
}

#passion-table tbody tr {
    border-bottom: 1px solid black;
}

#passion-table tbody td {
    padding: 2px;
    padding-left: 1rem;
}

#passion-table tr:last-child {
    border-bottom: none;
}

.passion-list-link:hover {
    cursor: pointer;
    background-color: rgb(132, 97, 202);
}

.listCurrent {
    background-color: rgb(115, 80, 185);
}

.listCurrent:hover {
    background-color: rgb(99, 67, 161);
}

#display {
    border-radius: 20px;
    height: 550px;
}

#box1, #box2 {
    height: 100%;
    float: left;
    padding: 1rem;
    padding-top: 0;
}

#box1 {
    width: 45%;
    padding-right: 2rem;
    border-right: 2px dashed purple;
}

#box2 {
    padding-left: 2rem;
    width: 55%;
}

.passion-title {
    text-decoration: underline;
    color: rgb(218, 173, 26);
    margin-bottom: 1.5rem;
}

.passion-heading {
    color: rgb(206, 163, 23);
    margin-top: 3rem;
    margin-bottom: .5rem;
}

li {
    float: none;
}

@media (max-width: 450px){
    .text-fluid {
        font-size: 18px;
    }
}

